--- a/my-app/project.config.json
+++ b/my-app/project.config.json
@@ -1,5 +1,5 @@
 {
-	"miniprogramRoot": ".dist",
+	"miniprogramRoot": "dist",
 	"projectname": "my-app",
 	"description": "",
 	"appid": "touristappid",
